unset shadow-hover zindex and remove bg-white to fix % mapped out of place

--- a/frontend/src/assets/styles/_extra.scss
+++ b/frontend/src/assets/styles/_extra.scss
@@ -51,5 +51,4 @@
 
 .shadow-hover::after {
   box-shadow: 0 7px 20px 0 rgba(0,0,0,0.08);
-  z-index: 0;
 }
